Add initial HTML structure for Pink Glamour website with header, sections, and footer

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                <img src="/front-end/assets/image1.png" alt="Ícone do Instagram" width="24" height="24" viewBox="0 0 24 24" >
                             </a>
                             <a href="#" class="bg-white text-primary p-2 rounded-full">
-                               <img src="/front-end/assets/image.png" alt="Ícone do whatsapp" width="24" height="24" viewBox="0 0 24 24" >
+                               <img src="/front-end/assets/image2.png" alt="Ícone do whatsapp" width="24" height="24" viewBox="0 0 24 24" >
                             </a>
                             </a>
                         </div>
